tests/ui/async-await/async-error-span.stderr
error[E0277]: `()` is not a future
  --> $DIR/async-error-span.rs:7:20
   |
LL | fn get_future() -> impl Future<Output = ()> {
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^ `()` is not a future
LL |
LL |     panic!()
   |     -------- return type was inferred to be `_` here
   |
   = help: the trait `Future` is not implemented for `()`

error[E0282]: type annotations needed
  --> $DIR/async-error-span.rs:13:9
   |
LL |     let a;
   |         ^
   |
help: consider giving `a` an explicit type
   |
LL |     let a: /* Type */;
   |          ++++++++++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0282.
For more information about an error, try `rustc --explain E0277`.
